--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   },
   "homepage": "https://github.com/djdfyz/yearproject#readme",
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "babel-core": "^6.26.3",
     "browser-sync": "^2.26.3",
     "current-device": "^0.7.8",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-cache": "^1.0.2",
     "gulp-cheerio": "^0.6.3",
     "gulp-concat": "^2.6.1",
